# LSW_compression

./: CMakeLists.txt
Coder/: BitWriter.h  Coder.cpp
Coder/DigitCoders/: DigitCoder.h  EliasDelta.h  EliasGamma.h  EliasOmega.h  FibbCoder.h  TestCoder.h
Decoder/: BitReader.h  Decoder.cpp
Decoder/DigitDecoders/: DigitDecoder.h  EliasDelta.h  EliasGamma.h  EliasOmega.h  FibbCoder.h  TestDecoder.h
Dictionaries/: ChainDictionary.h  Dictionary.h  HashDictionary.h  SimpleFixedSizeDictionary.h
